@@ -455,7 +455,7 @@ static int get_slave_result(void)
     }
 
 #if !defined(__INTEL_COMPILER) && (_MSC_VER >= 1400)
-    if (sscanf_s((char *)ident, "%d , %d : %s : %s : %s", &remote_port, &local_port, 
+    if (sscanf_s((char *)ident, "%d , %d : %s : %s : %s", &remote_port, &local_port,
                     token, MAX_STRING, os, MAX_STRING, userid, MAX_STRING) != 5)
 #else
     if (sscanf((char *)ident, "%d , %d : %s : %s : %s", &remote_port, &local_port,
